--- a/logIn.html
+++ b/logIn.html
@@ -11,7 +11,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 </head>
-<body>
+<body class="login-image">
 	<nav class="navbar white-bg">
 		<div class="container">
 			<a href="index.html" class="navbar-brand"> Home </a>
