--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 </head>
-<body class="bg-image">
+<body class="bg-image transparent-b">
 	<nav class="navbar white-bg">
 		<div class="container">
 			<a href="index.html" class="navbar-brand"> Home </a>
 			<a href="teamNews.html" class="navbar-brand"> Team News </a>
-			<a href="#" class="navbar-brand"> Team Lineup </a>
+			<a href="teamlineup" class="navbar-brand"> Team Lineup </a>
 			<a href="#" class="navbar-brand"> Results </a>
 			<ul class="nav navbar-nav pull-right">
 				<li class="nav-items">
@@ -34,6 +34,6 @@
 			<button class="text-center btn-outline-primary" > Join Us Here</button>
 		</a>
 	</div>
-	
+
 </body>
 </html>
