--- a/teamlineup.html
+++ b/teamlineup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Log in</title>
+	<title>Team Line Up</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -11,7 +11,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 </head>
-<body class="login-image">
+<body class="#">
 	<nav class="navbar white-bg">
 		<div class="container">
 			<a href="index.html" class="navbar-brand"> Home </a>
@@ -28,34 +28,6 @@
 			</ul>
 		</div>
 	</nav>
-
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<img class="bg-image2" src="img/England_rugby.jpg">
-			</div>
-			<div class="col-md-6 transparent-b">
-				<form action="action_page.php">	
-		    		<label><b>Email</b></label>
-		    		<input type="text" placeholder="Enter Email" name="email" required>
-
-		    		<label><b>Password</b></label>
-		    		<input type="password" placeholder="Enter Password" name="psw" required>
-
-		   			<label><b>Repeat Password</b></label>
-		    		<input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-		    		<input type="checkbox" checked="checked"> Remember me
-		    		<p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-
-		    		<div class="clearfix">
-		      			<button type="button"  class="cancelbtn">Cancel</button>
-		      			<button type="submit" class="signupbtn">Sign Up</button>
-		    		</div>
-				</form>
-
-			</div>	
-		</div>
-	</div>
-
+	
 </body>
 </html>
