--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 			<a href="#" class="navbar-brand"> Results </a>
 			<ul class="nav navbar-nav pull-right">
 				<li class="nav-items">
-					<a href="logIn.html" class="nav-link">Log in</a>
+					<a href="signup.html" class="nav-link">Sign up</a>
 				</li>
 				<li>
-					<a href="#" class="nav-link">Sign up</a>
+					<a href="#" class="nav-link">Log in</a>
 				</li>
 			</ul>
 		</div>
 	</nav>
 	<div class="container text-center">
 		<h1 class= "heading" > The Home of England Rugby </h1>
-		<a href="login.html">
+		<a href="signup.html">
 			<button class="text-center btn-outline-primary" > Join Us Here</button>
 		</a>
 	</div>
