--- a/teamlineup.html
+++ b/teamlineup.html
@@ -20,10 +20,10 @@
 			<a href="#" class="navbar-brand"> Results </a>
 			<ul class="nav navbar-nav pull-right">
 				<li class="nav-items">
-					<a href="logIn.html" class="nav-link">Log in</a>
+					<a href="logIn.html" class="nav-link">Sign up/a>
 				</li>
 				<li>
-					<a href="#" class="nav-link">Sign up</a>
+					<a href="#" class="nav-link">Log in</a>
 				</li>
 			</ul>
 		</div>
